Backport:

2005-10-13  Mark Mitchell  <mark@codesourcery.com>

	PR c++/22352
	* pt.c (tsubst_template_parms): Set processing_template_decl while
	processing the parameters.
	(tsubst_decl): Set processing_template_decl when substituting into
	a TEMPLATE_DECL.

	* g++.dg/template/friend38.C: New test.

From-SVN: r108066